--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -4,7 +4,7 @@
     "slug": "megaHanck5",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Icone.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
